--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
    </div>
    <div class="container">
       <div class="col-md-6">
-        <p>Copyright 2014 &copy; <a href="https://github.com/VictorPubh">Viictor Capivara</a>.</p>
+        <p>Copyright 2014 &copy; <a href="https://github.com/VictorPubh">Victor Pubh</a>.</p>
         <p>Thanks to <a href="https://github.com/marti1125">marti1125</a> and <a href="https://github.com/gpedro">gpedro</a>.</p>
       </div>
       <div class="col-md-6 text-right">
